Update Docker configuration and .gitignore for PostgreSQL data management

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,7 +87,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ./postgres_data:/var/lib/postgresql/data  # Ensure this path exists on your host machine
     networks:
       - app_network
 
